--- a/geo_oil/geo_oil.ipynb
+++ b/geo_oil/geo_oil.ipynb
@@ -93,50 +93,19 @@
     "import warnings\n",
     "\n",
     "\n",
-    "# для модели проверки адекватности\n",
-    "# from numpy.random import choice\n",
     "# для разделения данных на выборки\n",
     "from sklearn.model_selection import train_test_split \n",
-    "# метрика для моделей- accuracy\n",
-    "# from sklearn.metrics import accuracy_score\n",
-    "# метрика для моделей- F1-мера\n",
-    "# from sklearn.metrics import f1_score\n",
-    "# метрика для моделей AUC-ROC\n",
-    "# from sklearn.metrics import roc_auc_score\n",
     "# метрика MSE\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "# Классификатор Дерево решений\n",
-    "# from sklearn.tree import DecisionTreeClassifier\n",
-    "# from sklearn.tree import plot_tree\n",
-    "# Классификатор Случайный Лес \n",
-    "# from sklearn.ensemble import RandomForestClassifier\n",
-    "# Классификатор Логистическая регрессия\n",
-    "# from sklearn.linear_model import LogisticRegression\n",
     "# Линейная регрессия\n",
     "from sklearn.linear_model import LinearRegression\n",
     "# полиморфирование, или увеличение степеней признаков (для линейной регрессии)\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
-    "# Классификатор для проверки адекватности\n",
-    "# from sklearn.dummy import DummyClassifier\n",
-    "# для перевода категорийных данных от строк к числам\n",
-    "# from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
     "# для маштабирования признаков\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "# для перемешивания выборок\n",
-    "# from sklearn.utils import shuffle\n",
-    "# для изображения PR-кривой\n",
-    "# from sklearn.metrics import precision_recall_curve\n",
-    "# для изображения ROC-кривой\n",
-    "# from sklearn.metrics import roc_curve\n",
-    "# метрики точности и полноты\n",
-    "# from sklearn.metrics import precision_score, recall_score\n",
     "# для проверки гипотиз\n",
-    "from scipy import stats as st\n",
-    "\n",
-    "\n",
-    "# Запись моделей\n",
-    "#from joblib import dump\n",
-    "\n"
+    "from scipy import stats as st"
    ]
   },
   {
@@ -157,9 +126,7 @@
     "# pd.options.mode.chained_assignment = None\n",
     "\n",
     "# для увеличения окна вывода \n",
-    "pd.options.display.max_rows = 300\n",
-    "# зададим значение random seed для всех моделей random_state\n",
-    "# np.random.seed(54321)"
+    "pd.options.display.max_rows = 300"
    ]
   },
   {
